# eda_nlp

./: MANIFEST.in  README.md  get_sudachi_dict.sh  pyproject.toml
eda/: __init__.py  augment.py  eda_japanese.py  synonym_extractor.py  tokenizer.py
tests/: test_eda.py  test_get_synonym.py  test_tokenizer.py
